examples/bad/typecheck/comparing-functions.oo
int sum(int i) {
    return 1;
    if (i == 1) return 1;
    else return i + sum(i-1);
}

<(int) : int> sum1 = sum;
<(int) : int> sum2 = sum;

sum1 == sum2;
